--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -6,6 +6,7 @@
 @import '../global';
 
 
+@import './components/lazy-layout-loader';
 @import './components/sidebar';
 @import './components/navbar';
 @import './components/profile-panel';
