--- a/styles/theme/components/_navbar.scss
+++ b/styles/theme/components/_navbar.scss
@@ -35,6 +35,7 @@
     }
     &__menu{
         width: 300px;
+        background-color: $item;
         @include createFlex(row,flex-end,center,null);
         & > div{
             margin:0px 15px;
@@ -138,6 +139,8 @@
         left: -30px;
         top:50px;
         border-radius: 15px;
+        background-color: $item;
+
     }
     &__connection-menu-item{
         cursor: pointer;
