--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -55,6 +55,7 @@ a{
     width: 100vw;
     max-width: 100vw;
     height:100vh;
+    animation: fadeInWithOutMoving 1s ease-in-out forwards;
     @include createFlex(row,space-between,flex-start,null);
 }
 .container-inner{
