--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,3 +2,5 @@ $item:#2a3042;
 $background:#222735;
 $light-green:rgb(85, 85, 85);
 $strong-green:rgb(15, 141, 108);
+$neon-green:rgb(42, 172, 115);
+$neon-green-light:rgb(59, 235, 158);
