--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -14,4 +14,7 @@
 @import './components/small-widget';
 @import './components/email';
 
+@import './pages/sign';
 @import './pages/home';
+@import './pages/not-found';
+@import './pages/server-error';
