--- a/styles/theme/components/_sidebar.scss
+++ b/styles/theme/components/_sidebar.scss
@@ -7,6 +7,7 @@
     background-color: $item;
     h1{
         margin-left: 20px;
+        cursor: pointer;
     }
     svg{
         cursor: pointer;
