--- a/styles/theme/theme.css
+++ b/styles/theme/theme.css
@@ -421,6 +421,24 @@ template {
   }
 }
 
+@-webkit-keyframes fadeInWithOutMoving {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInWithOutMoving {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 3px;
   height: 3px;
@@ -468,6 +486,7 @@ template {
 body {
   font-family: 'Raleway', sans-serif;
   color: white;
+  background-color: #222735;
 }
 
 a {
@@ -479,6 +498,8 @@ a {
   width: 100vw;
   max-width: 100vw;
   height: 100vh;
+  -webkit-animation: fadeInWithOutMoving 1s ease-in-out forwards;
+          animation: fadeInWithOutMoving 1s ease-in-out forwards;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -498,6 +519,25 @@ a {
   height: 100vh;
   width: 80%;
   overflow-y: scroll;
+}
+
+.lazy-layout-loader {
+  width: 100vw;
+  height: 100vh;
+  background-color: #222735;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .sidebar {
@@ -639,6 +679,7 @@ a {
 
 .navbar__menu {
   width: 300px;
+  background-color: #2a3042;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -871,6 +912,7 @@ a {
   left: -30px;
   top: 50px;
   border-radius: 15px;
+  background-color: #2a3042;
 }
 
 .navbar__connection-menu.--open {
@@ -1151,6 +1193,59 @@ a {
   cursor: pointer;
 }
 
+.login {
+  padding: 50px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.login fieldset {
+  padding: 30px 80px;
+  border-radius: 10px;
+  border: 2px solid #0f8d6c;
+  background-color: #2a3042;
+}
+
+.login legend {
+  margin: 0px auto;
+  font-weight: bold;
+  font-size: 1.875rem;
+  color: #0f8d6c;
+}
+
+.login__img {
+  width: 300px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.login__field label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.login__field input {
+  padding: 5px;
+  width: 100%;
+  background-color: transparent;
+  border: 0px;
+  -webkit-box-shadow: 3px 3px 5px white, -3px -3px 5px #0f8d6c;
+          box-shadow: 3px 3px 5px white, -3px -3px 5px #0f8d6c;
+}
+
 #apexchartsbasicxcolumn .apexcharts-tooltip {
   color: #000000;
 }
@@ -1227,5 +1322,55 @@ a {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.not-found {
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.not-found__img {
+  width: 70%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.server-error {
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.server-error__img {
+  width: 70%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 /*# sourceMappingURL=theme.css.map */
