--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,3 +4,58 @@ $light-green:rgb(85, 85, 85);
 $strong-green:rgb(15, 141, 108);
 $neon-green:rgb(42, 172, 115);
 $neon-green-light:rgb(59, 235, 158);
+$cornflower-blue:#2b2d32;
+$seashellsolid:#f1f1f1;
+$yellowgreen:yellowgreen; 
+$skyblue:rgb(0, 183, 255);
+$lightgrey:lightgrey;
+$purple:purple;
+$blue:blue;
+$red:red;
+$white:white;
+$grey:grey;
+
+/*------------------------FONT-WEIGHTS-----------------------*/
+
+$f-reg:400;
+$f-bold:800;
+
+/*------------------------PADDINGS---------------------------*/
+
+$p-v-sm:5px;
+$p-sm:10px;
+$p-sm-md:20px;
+$p-md:25px;
+$p-md-l:30px;
+$p-l:50px;
+$p-v-l:100px;
+
+/*------------------------MARGINS---------------------------*/
+
+$m-v-sm:5px;
+$m-sm:10px;
+$m-sm-md:20px;
+$m-md:25px;
+$m-md-l:30px;
+$m-l:50px;
+$m-v-l:100px;
+
+/*------------------------SIZES-PX--------------------------*/
+
+$s-5:5px;
+$s-10:10px;
+$s-20:20px;
+$s-25:25px;
+$s-50:50px;
+$s-100:100px;
+$s-150:150px;
+$s-200:200px;
+$s-250:250px;
+
+/*------------------------SIZES-PR--------------------------*/
+
+$s-5-p:5%;
+$s-10-p:10%;
+$s-25-p:25%;
+$s-50-p:50%;
+$s-100-p:100%;
