--- a/styles/theme/pages/_dashboard.scss
+++ b/styles/theme/pages/_dashboard.scss
@@ -1,7 +1,7 @@
 #apexchartsbasicxcolumn .apexcharts-tooltip {
     color: #000000;
   }
-.home{
+.dashboard{
     padding:20px;
     position: relative;
     top:70px;
