--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,2 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;600&display=swap');
