--- a/styles/theme/components/_todo.scss
+++ b/styles/theme/components/_todo.scss
@@ -64,9 +64,12 @@
        
     }
     &__body{
+        padding:10px 20px 10px 0px;
         border-bottom: 1px solid $strong-green;
         border-top: 1px solid $strong-green;
         height:320px;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     &__footer{
         height:70px;
