--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -14,6 +14,7 @@
 @import './components/small-widget';
 @import './components/email';
 @import './components/todo';
+@import './components/todo-item';
 @import './components/calendar';
 @import './components/wheather-widget';
 
