--- a/styles/theme/animations/_animations.scss
+++ b/styles/theme/animations/_animations.scss
@@ -30,7 +30,29 @@
     }
 }
 
+
 @keyframes fadeInWithOutMoving{
     0%{opacity:0}
     100%{opacity:1}
+}
+
+@keyframes fadeInLeft {
+    0%{
+        opacity:0;
+        transform:translateX(100%)
+    }
+    100%{
+        opacity:1;
+        transform:translateX(0%)
+    }
+}
+@keyframes fadeInRight {
+    0%{
+        opacity:0;
+        transform:translateX(-100%)
+    }
+    100%{
+        opacity:1;
+        transform:translateX(0%)
+    }
 }
