--- a/styles/theme/components/_todo.scss
+++ b/styles/theme/components/_todo.scss
@@ -142,7 +142,7 @@
         margin-top: 20px;
         width: 100%;
         @include createFlex(row,flex-start,center,null);
-        input:first-of-type,{
+        input:first-of-type{
             border:0px;
             color:white;
             width: 100%;
