--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -21,5 +21,6 @@
 @import './pages/sign';
 @import './pages/dashboard';
 @import './pages/tasks';
+@import './pages/invoices';
 @import './pages/not-found';
 @import './pages/server-error';
