--- a/styles/theme/pages/_invoices.scss
+++ b/styles/theme/pages/_invoices.scss
@@ -3,4 +3,13 @@
     top:70px;
     left:0px;
     padding:20px;
+    &__inner{
+    }
+    embed{
+        opacity:0;
+        margin-top:50px;
+        width: 100%;
+        height:842px;
+        animation: fadeIn 1s ease-in-out forwards;
+    }
 }
