init pages invoices desktop complete

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -47,6 +47,11 @@ body{
     color:white;
     background-color: $background;
 }
+label{
+    font-family: 'Raleway', sans-serif;
+    color:white;
+    font-weight: bold;
+}
 a{
     padding:0px;
 }
