--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -17,6 +17,7 @@
 @import './components/todo-item';
 @import './components/calendar';
 @import './components/wheather-widget';
+@import './components/invoice-item';
 
 @import './pages/sign';
 @import './pages/dashboard';
