--- a/styles/theme/pages/_invoices.scss
+++ b/styles/theme/pages/_invoices.scss
@@ -3,13 +3,102 @@
     top:70px;
     left:0px;
     padding:20px;
-    &__inner{
+    button{
+        cursor: pointer;
+        padding:10px 20px;
+        border-radius:25px;
+        border:0px;
+        font-weight: bold;
+        color:white;
+        &:active{
+            outline: none;
+            border:0px;
+        }
     }
-    embed{
-        opacity:0;
-        margin-top:50px;
+    &__green-btn{
+        background:linear-gradient(45deg, $neon-green,yellowgreen);
+        &:hover{
+        background:linear-gradient(45deg,yellowgreen, $neon-green);
+
+        }
+    }
+    &__red-btn{
+        background:linear-gradient(45deg, red,orange);
+        &:hover{
+        background:linear-gradient(45deg,orange, red);
+
+        }
+    }
+    &__inner{
+        height:100vh;
+        margin-bottom: 20px;
+        @include createFlex(row,space-between,flex-start,null);
+        transition: all 0.3s ease-in-out;
+    }
+    &__left-panel{
+        box-sizing: border-box;
+        padding-top: 20px;
+        overflow-x: hidden;
+        width: 0%;
+        max-width: 100%;
+    }
+    &__field{        
+        margin:5px 0px;
+        margin-right: 40px;
+        label{
+            margin-bottom: 5px;
+            display: block;   
+        }
+        input[type="file"]{
+            position: relative;
+            z-index: 2;
+            top:-40px;
+            left:0px;
+            opacity:0;
+        }
+        input,.invoices__input-file{
+            background-color: $item;
+            padding:10px;
+            width: 100%;
+            border:0px;
+            border-bottom: 1px solid transparent;
+            border-radius: 25px;
+            color:white;
+            &:hover,&:focus,&:active{
+                outline: none;
+                border-bottom: 1px solid $strong-green;
+            }
+        }
+    }
+    &__input-file{
+        cursor: pointer;
+        color:white;
+        height:20px;
+        svg{
+            margin-right: 10px;
+            width: 20px;
+            height:20px;
+        }
+    }
+    &__right-panel{
         width: 100%;
-        height:842px;
-        animation: fadeIn 1s ease-in-out forwards;
+        overflow-y: scroll;
+        height:130vh;
+        &::-webkit-scrollbar{
+            display: none;
+        }
+    }
+    &__pdf-viewer{
+        position: relative;
+        z-index: 3;
+        top:0px;
+        left:0px;
+        embed{
+            opacity:0;
+            margin-top:50px;
+            width: 100%;
+            height:842px;
+            animation: fadeIn 1s ease-in-out forwards;
+        }
     }
 }
