--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -53,7 +53,10 @@ label{
     font-weight: bold;
 }
 a{
+    font-family: 'Raleway', sans-serif;
     padding:0px;
+    color:white;
+    text-decoration: none;
 }
 .container{
     overflow:hidden;
