--- a/styles/theme/animations/_animations.scss
+++ b/styles/theme/animations/_animations.scss
@@ -36,4 +36,23 @@
     100%{opacity:1}
 }
 
-
+@keyframes fadeInLeft {
+    0%{
+        opacity:0;
+        transform:translateX(20px);
+    }
+    100%{
+        opacity:1;
+        transform:translateX(0%);
+    }
+}
+@keyframes fadeInRight {
+    0%{
+        opacity:0;
+        transform:translateX(20px);
+    }
+    100%{
+        opacity:1;
+        transform:translateX(0%);
+    }
+}
