--- a/styles/theme/components/_sidebar.scss
+++ b/styles/theme/components/_sidebar.scss
@@ -23,9 +23,14 @@
         padding:0px 20px;
         font-family:'Righteous';
         @include createFlex(row,flex-start,center,null);
+        a{
+            font-weight: bold;
+        }
         &:hover{
+            a{
+                color:yellowgreen;
+            }
             cursor:pointer;
-            color:white;
             background-color: $light-green;
         }
     }
