--- a/styles/theme/components/_wheather-widget.scss
+++ b/styles/theme/components/_wheather-widget.scss
@@ -2,6 +2,7 @@
     &__main-item-header {
         height: 50px;
         @include createFlex(row, flex-start, center, null);
+
     }
     &__main-item {
         position: relative;
@@ -17,7 +18,7 @@
         border-radius: 10px;
         transition: all 1s ease-in-out;
         color:$white;
-        animation: comesIn 0.7s ease-in-out forwards;
+        animation:fadeInRight 1s ease-in-out forwards;
         @include breakpoint-down(medium){
             width:85%;
             left:0%;
