--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -5,7 +5,6 @@
 @import './animations/animations';
 @import '../global';
 
-
 @import './components/lazy-layout-loader';
 @import './components/sidebar';
 @import './components/navbar';
@@ -18,10 +17,15 @@
 @import './components/calendar';
 @import './components/wheather-widget';
 @import './components/invoice-item';
+@import './components/chat-window';
+@import './components/chat-message';
+@import './components/chat-contacts';
+@import './components/chat-contact-item';
 
 @import './pages/sign';
 @import './pages/dashboard';
 @import './pages/tasks';
 @import './pages/invoices';
+@import './pages/chat';
 @import './pages/not-found';
 @import './pages/server-error';
