update pages and fix todo

--- a/styles/theme/components/_sidebar.scss
+++ b/styles/theme/components/_sidebar.scss
@@ -28,7 +28,7 @@
         }
         &:hover{
             a{
-                color:yellowgreen;
+                color:yellow;
             }
             cursor:pointer;
             background-color: $light-green;
