--- a/styles/theme/components/_email-item.scss
+++ b/styles/theme/components/_email-item.scss
@@ -1,10 +1,10 @@
-.email{
+.email-item{
     min-width: 100%;
-    height:50px;
     margin:5px 0px;
     border-radius:25px;
     padding:0px 20px 0px 0px;
     background-color: $item;
+    overflow: hidden; 
     @include createFlex(row,flex-start,center,null);
     &__img{
         margin-right: 20px;
@@ -12,6 +12,7 @@
         height:45px;
         overflow: hidden;
         border-radius:100%;
+        @include createIsomorphicConvex(black,$neon-green);
         img{
             width: 100%;
         }
@@ -34,5 +35,24 @@
     }
     &__close{
         cursor: pointer;
+    }
+    &__view-btn{
+        cursor: pointer;
+        height:39px;
+        padding:0px 20px;
+        border-radius: 25px;
+        border:0px;
+        font-weight: bold;
+        color:white;
+        background:linear-gradient(45deg, $neon-green,yellowgreen);
+        @include createIsomorphicConvex(black,$neon-green);
+        &:hover{
+            background:linear-gradient(45deg,yellowgreen, $neon-green);
+        }
+        &:active{
+            outline: none;
+            border:0px;
+        }
+        
     }
 }
