--- a/styles/theme/pages/_emails.scss
+++ b/styles/theme/pages/_emails.scss
@@ -5,7 +5,14 @@
     top:70px;
     left:0px;
     padding:20px;
-    @include createFlex(row,space-between,flex-start,null);
+    &__search{
+        text-align:right;
+        margin-bottom:10px;
+        @include createFlex(row,space-between,center,null);
+    }
+    &__main{
+        @include createFlex(row,space-between,flex-start,null);
+    }
     &__contacts-wrapper{
         box-sizing: border-box;
         padding:20px 0px 20px 20px;
@@ -37,33 +44,35 @@
         .email{
             margin:10px 0px;
         }
+        animation:fadeIn 1s ease-in-out forwards;
     }
     &__preview-item{
         position:relative;
         top:0px;
         left:0px;
         height:100%;
+        animation:fadeIn 1s ease-in-out forwards;
     }
     &__preview-controls{
         position:absolute;
         bottom:10px;
         right:-30px;
-        button{
-            margin:0px 5px;
-            cursor: pointer;
-            padding:10px 20px;
-            border-radius:25px;
-            border:0px;
-            font-weight: bold;
-            color:white;
-            &:active{
-                outline: none;
-                border:0px;
-            }
-        
-        }
     }
-    &__reply-btn{
+    &__write-btn,&__hide-btn{
+        margin:0px 5px;
+        cursor: pointer;
+        padding:10px 20px;
+        border-radius:25px;
+        border:0px;
+        font-weight: bold;
+        color:white;
+        &:active{
+            outline: none;
+            border:0px;
+        }
+    
+    }
+    &__write-btn{
         background:linear-gradient(45deg, $neon-green,yellowgreen);
         &:hover{
             background:linear-gradient(45deg,yellowgreen, $neon-green);
@@ -76,15 +85,20 @@
 
         }
     }
-    &__reply-item{
+    &__write-item{
         width: 103%;
+        animation:fadeIn 1s ease-in-out forwards;
+        button{
+            display: block;
+            margin-left:auto;
+        }
     }
-    &__reply-field{
+    &__write-field{
+        margin:10px 0px;
         label{
             display: block;
             margin-bottom:5px;
         }
-        margin:10px 0px;
         input,textarea{
             min-width: 100%;
             width: 100%;
