--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -8,6 +8,7 @@
 @import './components/lazy-layout-loader';
 @import './components/sidebar';
 @import './components/navbar';
+@import './components/search';
 @import './components/profile-panel';
 @import './components/monthly-panel';
 @import './components/small-widget';
@@ -20,8 +21,9 @@
 @import './components/chat-window';
 @import './components/chat-message';
 @import './components/chat-contacts';
-@import './components/contact-item';
+@import './components/chat-contact-item';
 @import './components/email-contact-item';
+@import './components/contact-item';
 
 @import './pages/sign';
 @import './pages/dashboard';
@@ -29,5 +31,6 @@
 @import './pages/invoices';
 @import './pages/chat';
 @import './pages/emails';
+@import './pages/contacts';
 @import './pages/not-found';
 @import './pages/server-error';
