init firebase update user actions

--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -9,6 +9,7 @@
 @import './components/sidebar';
 @import './components/navbar';
 @import './components/search';
+@import './components/lock-screen';
 @import './components/profile-panel';
 @import './components/monthly-panel';
 @import './components/small-widget';
