--- a/styles/theme/components/_search.scss
+++ b/styles/theme/components/_search.scss
@@ -19,6 +19,10 @@
         }
     
     }
+    &__a-z-btn{
+        border-top-right-radius: 0px !important;
+        border-bottom-right-radius: 0px !important;
+    }
     input{
         position: relative;
         top:1px;
