--- a/styles/theme/components/_contact-item.scss
+++ b/styles/theme/components/_contact-item.scss
@@ -57,6 +57,12 @@
                 outline: none;
                 border:0px;
             }
+            &:nth-of-type(2){
+                background:linear-gradient(45deg,$neon-green, skyblue);
+                &:hover{
+                    background:linear-gradient(45deg,rgb(0, 187, 255), $neon-green);
+                }
+            }
             
         }
     }
