small fixes. dashboard and my wallet to do

--- a/styles/theme/components/_chat-message.scss
+++ b/styles/theme/components/_chat-message.scss
@@ -19,6 +19,8 @@
             left:-45px;
             width: 30px;
             height:30px;
+            border-radius: 100%;
+            overflow: hidden;
         }
        
     }
@@ -31,6 +33,8 @@
             left:235px;
             width: 30px;
             height:30px;
+            border-radius: 100%;
+            overflow: hidden;
         }
     }
    
