--- a/styles/theme/pages/_dashboard.scss
+++ b/styles/theme/pages/_dashboard.scss
@@ -1,6 +1,9 @@
 #apexchartsbasicxcolumn .apexcharts-tooltip {
     color: #000000;
   }
+  .apexcharts-menu {
+    color: #000000;
+  }
 .dashboard{
     padding:20px;
     position: relative;
