--- a/styles/theme/components/_navbar.scss
+++ b/styles/theme/components/_navbar.scss
@@ -104,6 +104,7 @@
         img{
             width:30px;
             margin-right: 8px;
+            border-radius: 100%;
         }
         h3,p{
             margin:3px 0px;
@@ -127,6 +128,9 @@
         @include createFlex(row,center,center,null);
         div{
             margin-left:10px;
+        }
+        img{
+            border-radius:100%;
         }
     }
     &__profile-menu{
