--- a/styles/theme/components/_settings-widget.scss
+++ b/styles/theme/components/_settings-widget.scss
@@ -36,6 +36,9 @@
         z-index: 2;
         top:0px;
         left:0px;
+        border-radius: 100%;
+        overflow: hidden;
+        border:5px solid white;
         img{
             width: 100%;
         }
