fix todo and add new func. todo and invoices to encrypt

--- a/styles/theme/components/_todo-item.scss
+++ b/styles/theme/components/_todo-item.scss
@@ -33,6 +33,11 @@
           height:20px;
         }
     }
+    &__order{
+        margin-right:20px;
+        color:lightgray;
+        font-style:italic;
+    }
     &__completed{
         color:yellowgreen;
     }
