--- a/styles/theme/theme.scss
+++ b/styles/theme/theme.scss
@@ -34,6 +34,7 @@
 @import './pages/chat';
 @import './pages/emails';
 @import './pages/contacts';
+@import './pages/statistics';
 @import './pages/settings';
 @import './pages/not-found';
 @import './pages/server-error';
