--- a/styles/theme/pages/_settings.scss
+++ b/styles/theme/pages/_settings.scss
@@ -1,3 +1,9 @@
+#apexchartsbasicxcolumn .apexcharts-tooltip {
+    color: #000000 !important;
+  }
+  .apexcharts-menu {
+    color: #000000 !important;
+  }
 .settings{
     padding:50px;
     position: relative;
